[metadata]
name = PySortingNetworks
version = 0.0.0
author = Christoph Wiedemann
description = Research project for understanding sorting networks with application to practical 2D median filtering
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = False
packages = find:

